examples/errors/parsing/ptr_eq.cn
fun isAlias : (Ptr Int * Ptr Int) -> Bool [pure] = {
  (a, b) -> Eq[Ptr Int] (a, b)
}

main : () [impure] =
  let p = New[Int] 10;
  let q = New[Int] 20;
  let same = isAlias (p, p);
  let diff = isAlias (p, q);
  let u = Del[Int] p;
  let v = Del[Int] q;
  ()
